Automatically select food